# pydecomp

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  pyproject.toml  setup.py  test.py
.github/workflows/: ci.yml  release.yml
examples/: ellipsoid_decomp_2D.py  logo_decomp.py  ptcloud_decomp_2D.py  ptcloud_decomp_3D.py  random_corridor_generator.py
src/pydecomp/: __init__.py  pydecomp.cpp
src/pydecomp/_utils/: environment.py  quaternion.py  visualize.py
tests/: test_decomposition.py  test_import.py
